[package]
name = "unc-jsonrpc-client"
version = "0.1.0"
authors = ["unc Inc <hello@uncprotocol.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/unc/unc-jsonrpc-client-rs"
description = "Lower-level API for interfacing with the unc Protocol via JSONRPC"
categories = ["asynchronous", "api-bindings", "network-programming"]
keywords = ["unc", "api", "jsonrpc", "rpc", "async"]
rust-version = "1.67.1"

[dependencies]
log = "0.4.17"
borsh = "1.3.0"
serde = "1.0.145"
reqwest = { version = "0.11.12", features = ["json"], default-features = false }
thiserror = "1.0.37"
serde_json = "1.0.85"
lazy_static = "1.4.0"

unc-crypto = "0.1.0"
unc-primitives = "0.1.0"
unc-chain-configs = "0.1.0"
unc-jsonrpc-primitives = "0.1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"

[features]
default = ["native-tls"]
any = []
sandbox = []
adversarial = []
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[[example]]
name = "auth"

[package.metadata.docs.rs]
features = ["any", "sandbox"]
